k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: retailpulse-dashboard-svc
  namespace: retailpulse
  labels:
    app: retailpulse-dashboard
spec:
  type: ClusterIP
  selector:
    app: retailpulse-dashboard
  ports:
    - name: http
      port: 80
      targetPort: 8501
      protocol: TCP
