k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retailpulse-dashboard-ingress
  namespace: retailpulse
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - retailpulse.example.com
      secretName: retailpulse-tls
  rules:
    - host: retailpulse.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retailpulse-dashboard-svc
                port:
                  number: 80
